--- a/Agenda2.0/Agenda2.0.csproj
+++ b/Agenda2.0/Agenda2.0.csproj
@@ -63,6 +63,12 @@
     <Compile Include="FrmMenu.Designer.cs">
       <DependentUpon>FrmMenu.cs</DependentUpon>
     </Compile>
+    <Compile Include="FrmPesquisar.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmPesquisar.Designer.cs">
+      <DependentUpon>FrmPesquisar.cs</DependentUpon>
+    </Compile>
     <Compile Include="FrmTestar.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -76,6 +82,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FrmMenu.resx">
       <DependentUpon>FrmMenu.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmPesquisar.resx">
+      <DependentUpon>FrmPesquisar.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
